# Voxalyzer

./: .gitmodules  Dockerfile  README.md  main.py  mapping.py  mp3.py  music2emotion.py  pyproject.toml  server.py
models/: mood_aggressive-discogs-effnet-1.json  mood_happy-discogs-effnet-1.json  mood_party-discogs-effnet-1.json  mood_relaxed-discogs-effnet-1.json  mood_sad-discogs-effnet-1.json  tonal_atonal-discogs-effnet-1.json
