[project]
name = "voxalyzer"
version = "0.1.0"
description = "MP3 analysis tool using Essentia and FastAPI"
requires-python = ">=3.9"
dependencies = [
    "essentia",
    "numpy",
    "mutagen",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
voxalyzer = "server:main"
voxalyze = "main:main"